@@ -23,34 +23,35 @@ DIST netbeans-6_0-m7-src-200702191730-ide_sources-19_Feb_2007_1731.tar.bz2 12896
 DIST netbeans-6_0-m8-src-200703280911-ide_sources-28_Mar_2007_0911.tar.bz2 134016020 RMD160 fde5502496d4349e299dc5fec910c4126b5f7ac2 SHA1 28d07a58bc980d0173b51d3d5f71604aaa06c152 SHA256 073c32e166cd6a69f9016f5bf5e85c10d2a92a8d6143e005224af6ce2104281c
 DIST netbeans-mobility-6_0-m7.tar.bz2 5676063 RMD160 58c33fa05acf920d09523d4421875e3d90225a48 SHA1 77432316277c309e20a1c92e29dc653abd295936 SHA256 69223b6383d137213cea7391c207a3d2b0fb451a71e2e2bc62611bf61c42afd0
 DIST netbeans-mobility-6_0-m8.tar.bz2 5753870 RMD160 15e46ba47f707bce874769d23f39726245a09cda SHA1 841b30721b820a0e77db9b8c3952b5b56fd9fb26 SHA256 f841c47ae0bb832b3fef4c3802f1e9f462afa6434095da63fbff3d80abfd26d3
+DIST netbeans-scripting-6_0-m8.tar.bz2 9361425 RMD160 fbfe42da7dc81faec6d4791c530800bc354c58dd SHA1 e6b2e966ecf0aa5636cf230cc4028f8140c082af SHA256 ca195c14b6e3378e01f8f495ea62d54d7480ef5052a6940a235ffd9e3a146979
 DIST netbeans-visualweb-6_0-m8.tar.bz2 69953755 RMD160 4abb2f943db232e5cf5b27db131bba722a5750f7 SHA1 df6ebc82bc6d5ce57c30341c15a0e541504e41ea SHA256 24cfa115b21e06cff1e17ed7dd05842ace91d3d4be9d7df085fad891fae1e391
 DIST profiler-60dev-linux.bin 8690688 RMD160 854ae1659d094e77656d224c642c6836419ff4a9 SHA1 36c63f4a84eec9cd02ea41a3150cf85e17c92248 SHA256 d6a13eed1a7a0429c67c2a147b82c3d62d34ade7fd1bce8c1dfbaf0fe33b3e08
-EBUILD netbeans-5.5-r5.ebuild 17542 RMD160 dd784780a1714cf89f8b5e0732bc038a3eb81061 SHA1 684a5fbe6367e9bad1657da8f3fcc70e13948970 SHA256 193209d2630d7aaae43605b47bd01c4977d42dcdfa88379b7a43c10a174ddd22
-MD5 036f5ebc6efacd7cd3fae004d2978310 netbeans-5.5-r5.ebuild 17542
-RMD160 dd784780a1714cf89f8b5e0732bc038a3eb81061 netbeans-5.5-r5.ebuild 17542
-SHA256 193209d2630d7aaae43605b47bd01c4977d42dcdfa88379b7a43c10a174ddd22 netbeans-5.5-r5.ebuild 17542
+EBUILD netbeans-5.5-r6.ebuild 17453 RMD160 0baca06de3f39d3b9c9fcddae85957fec38e8bc9 SHA1 e4f50ef9822c614e17ccf5293be6c5db0d1bec1a SHA256 c1b3960a04cfc3f3d2e9a143cd5d719c179fad20b0bd0227f1fd132b217e0e0b
+MD5 cb79f81d75de264e94b6a06522646713 netbeans-5.5-r6.ebuild 17453
+RMD160 0baca06de3f39d3b9c9fcddae85957fec38e8bc9 netbeans-5.5-r6.ebuild 17453
+SHA256 c1b3960a04cfc3f3d2e9a143cd5d719c179fad20b0bd0227f1fd132b217e0e0b netbeans-5.5-r6.ebuild 17453
 EBUILD netbeans-6.0_alpha7.ebuild 25032 RMD160 b3e26a42845fb802c28e0d5f98282ea48be22b58 SHA1 efa7f5926c55ff909ad4f9b2edf74ccdd5e30c5a SHA256 953ddd9ee883409cfa946bc9c1661d7018fc9f615c1939eb1863297d1a979e0e
 MD5 f9f92cc77fe077e55e0fb79c819c472f netbeans-6.0_alpha7.ebuild 25032
 RMD160 b3e26a42845fb802c28e0d5f98282ea48be22b58 netbeans-6.0_alpha7.ebuild 25032
 SHA256 953ddd9ee883409cfa946bc9c1661d7018fc9f615c1939eb1863297d1a979e0e netbeans-6.0_alpha7.ebuild 25032
-EBUILD netbeans-6.0_alpha8.ebuild 26696 RMD160 ba75335d7f8f1865839427d9e73f3f6b4c83ce88 SHA1 bb95cedd44dbaad65e8d62f539182cc6f5fa1316 SHA256 84accde9b7432c060248352c1b98eb9be1211d6c54ac3833b80e61f6726683b7
-MD5 bf0f6b91ec53504d8e77f4a8fb14098c netbeans-6.0_alpha8.ebuild 26696
-RMD160 ba75335d7f8f1865839427d9e73f3f6b4c83ce88 netbeans-6.0_alpha8.ebuild 26696
-SHA256 84accde9b7432c060248352c1b98eb9be1211d6c54ac3833b80e61f6726683b7 netbeans-6.0_alpha8.ebuild 26696
-MISC ChangeLog 9551 RMD160 bea33744003b7734f2b2418cca7e7728757558f3 SHA1 5f98567edadfb1b33573b10a7e9cba6efdab250e SHA256 951021a68571db62c1fd791eafa39e4bc2e7281f99c416dca85cd9c0a4efb59d
-MD5 ce719495a3d08ecc81d4f3f7a68cb28c ChangeLog 9551
-RMD160 bea33744003b7734f2b2418cca7e7728757558f3 ChangeLog 9551
-SHA256 951021a68571db62c1fd791eafa39e4bc2e7281f99c416dca85cd9c0a4efb59d ChangeLog 9551
+EBUILD netbeans-6.0_alpha8.ebuild 27410 RMD160 64f993a2141e18cb3cec4ccfd8d2a6895eef87c9 SHA1 a28a800bbf35048760459d2f1577db68a40e6fc7 SHA256 d8a8fdea2cd8705f93692b1230192bbaf46e4ef70143a9b33592a860d4daa9b9
+MD5 b0b2dbad87f0bff4f5ec9dc104a39b7e netbeans-6.0_alpha8.ebuild 27410
+RMD160 64f993a2141e18cb3cec4ccfd8d2a6895eef87c9 netbeans-6.0_alpha8.ebuild 27410
+SHA256 d8a8fdea2cd8705f93692b1230192bbaf46e4ef70143a9b33592a860d4daa9b9 netbeans-6.0_alpha8.ebuild 27410
+MISC ChangeLog 9730 RMD160 0381b772d843a8ffce4894ff6731feda292ad33e SHA1 5f2a521b7d2bf50f8317f5e4f8db92d3aaaed543 SHA256 fc27b36f7647dbfcae38713b9477d82b592a0b6a3f59962bfe9c04f1a65913aa
+MD5 6553a40c9b5abc59bf20bef2b051a29c ChangeLog 9730
+RMD160 0381b772d843a8ffce4894ff6731feda292ad33e ChangeLog 9730
+SHA256 fc27b36f7647dbfcae38713b9477d82b592a0b6a3f59962bfe9c04f1a65913aa ChangeLog 9730
 MISC metadata.xml 1128 RMD160 9ba1b3fec0fedacd10416e7c61edfecada1912cd SHA1 997b3db42167a9e591c3667ffddd125bbb85fa98 SHA256 8c524b060fdbfc4aa432a528c2e78ad05eb20fcf4bc8973c1c8366699bb90b5a
 MD5 e7fcbf7f5131562425fda47afe3b39b9 metadata.xml 1128
 RMD160 9ba1b3fec0fedacd10416e7c61edfecada1912cd metadata.xml 1128
 SHA256 8c524b060fdbfc4aa432a528c2e78ad05eb20fcf4bc8973c1c8366699bb90b5a metadata.xml 1128
-MD5 f237047066edfa79b73944b48b864660 files/digest-netbeans-5.5-r5 286
-RMD160 f9ccd6b0d51aa578effc86871f374b8d419ef42a files/digest-netbeans-5.5-r5 286
-SHA256 6ccefbf351ddcc6eb05dc70fb8ba2453bbec18957ccf012e31f920e52c73e664 files/digest-netbeans-5.5-r5 286
+MD5 f237047066edfa79b73944b48b864660 files/digest-netbeans-5.5-r6 286
+RMD160 f9ccd6b0d51aa578effc86871f374b8d419ef42a files/digest-netbeans-5.5-r6 286
+SHA256 6ccefbf351ddcc6eb05dc70fb8ba2453bbec18957ccf012e31f920e52c73e664 files/digest-netbeans-5.5-r6 286
 MD5 97591b4d790ba84e7e5fa9ba19829a12 files/digest-netbeans-6.0_alpha7 933
 RMD160 90bcaea9a0cb085b41c56aaba0358f551e10b334 files/digest-netbeans-6.0_alpha7 933
 SHA256 0f1f132d7a8fdcb53c2a8feea661a9d514434ab61d1328c806db11c37114730b files/digest-netbeans-6.0_alpha7 933
-MD5 86d62eac93edc34bf66cfc814fea13c2 files/digest-netbeans-6.0_alpha8 963
-RMD160 2b7afb6e143494e6aad45fb138cb6e6ef4119585 files/digest-netbeans-6.0_alpha8 963
-SHA256 11a6d36f50e7e824046a662b5dc4d0e778ba87f9bbef89b31532cacaf47d53b7 files/digest-netbeans-6.0_alpha8 963
+MD5 f209d2fcf29ea7f99c4de9e144784a3a files/digest-netbeans-6.0_alpha8 1246
+RMD160 9633014e300f54d7d5ef3cbf26d4443d60ed5220 files/digest-netbeans-6.0_alpha8 1246
+SHA256 eb67f7d469aae2c005ac7b1284eaacd85f7186eaecb991e401741a4a76f38984 files/digest-netbeans-6.0_alpha8 1246
