@@ -4,6 +4,9 @@ SHA256 073c32e166cd6a69f9016f5bf5e85c10d2a92a8d6143e005224af6ce2104281c netbeans
 MD5 9127ee790e36b2426f6800eb913f6fb6 netbeans-mobility-6_0-m8.tar.bz2 5753870
 RMD160 15e46ba47f707bce874769d23f39726245a09cda netbeans-mobility-6_0-m8.tar.bz2 5753870
 SHA256 f841c47ae0bb832b3fef4c3802f1e9f462afa6434095da63fbff3d80abfd26d3 netbeans-mobility-6_0-m8.tar.bz2 5753870
+MD5 9888e94fb3a43c18229a23aa8532f8d0 netbeans-scripting-6_0-m8.tar.bz2 9361425
+RMD160 fbfe42da7dc81faec6d4791c530800bc354c58dd netbeans-scripting-6_0-m8.tar.bz2 9361425
+SHA256 ca195c14b6e3378e01f8f495ea62d54d7480ef5052a6940a235ffd9e3a146979 netbeans-scripting-6_0-m8.tar.bz2 9361425
 MD5 0b671a1ecc25c8c2724579f544bbd6cb netbeans-visualweb-6_0-m8.tar.bz2 69953755
 RMD160 4abb2f943db232e5cf5b27db131bba722a5750f7 netbeans-visualweb-6_0-m8.tar.bz2 69953755
 SHA256 24cfa115b21e06cff1e17ed7dd05842ace91d3d4be9d7df085fad891fae1e391 netbeans-visualweb-6_0-m8.tar.bz2 69953755
