@@ -2,6 +2,10 @@
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  16 Apr 2007; Miroslav Šulc <fordfrog@gentoo.org> -netbeans-5.5-r5.ebuild,
+  +netbeans-5.5-r6.ebuild, netbeans-6.0_alpha8.ebuild:
+  Added support for ruby + renamed 5.5 to -r6
+
   16 Apr 2007; Miroslav Šulc <fordfrog@gentoo.org>
   netbeans-6.0_alpha8.ebuild:
   Removed jars that are no more used by upstream
